<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_settings">

        <EditTextPreference
            app:key="server_url"
            app:title="@string/server_url"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="http://192.168.1.100:9000" />

        <EditTextPreference
            app:key="api_endpoint"
            app:title="@string/api_endpoint"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="/asr" />

        <EditTextPreference
            app:key="api_key"
            app:title="@string/api_key"
            app:summary="@string/api_key_summary"
            app:defaultValue="" />

        <EditTextPreference
            app:key="connection_timeout"
            app:title="@string/connection_timeout"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="30" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_settings">

        <EditTextPreference
            app:key="language"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="en" />

        <EditTextPreference
            app:key="output_format"
            app:title="@string/output_format"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="txt" />

        <SwitchPreferenceCompat
            app:key="auto_copy"
            app:title="@string/auto_copy"
            app:summary="@string/auto_copy_summary"
            app:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
